// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitInputField should render as disabled field 1`] = `
<div
  className="container-unit-input-field"
>
  <FormGroup
    fieldId="quota-limit-resource-quota-form-group"
    label="Quota Limit"
    labelIcon={
      <LabelIcon
        text="Descriptive title."
      />
    }
    validated="default"
  >
    <InputGroup>
      <InputGroupItem>
        <TextInput
          id="reg_token_life_time_input"
          isDisabled={true}
          max={5}
          min={0}
          onChange={[Function]}
          validated="default"
          value={0}
        />
      </InputGroupItem>
      <InputGroupItem>
        <Dropdown
          dropdownItems={
            Array [
              <DropdownItem
                id="unit-dropdownitem-mib"
              >
                MiB
              </DropdownItem>,
              <DropdownItem
                id="unit-dropdownitem-gib"
              >
                GiB
              </DropdownItem>,
            ]
          }
          isOpen={false}
          onSelect={[Function]}
          toggle={
            <DropdownToggle
              isDisabled={true}
              onToggle={[Function]}
            >
              MiB
            </DropdownToggle>
          }
        />
      </InputGroupItem>
    </InputGroup>
  </FormGroup>
</div>
`;

exports[`UnitInputField should render default 1`] = `
<div
  className="container-unit-input-field"
>
  <FormGroup
    fieldId="quota-limit-resource-quota-form-group"
    label="Quota Limit"
    labelIcon={
      <LabelIcon
        text="Descriptive title."
      />
    }
    validated="default"
  >
    <InputGroup>
      <InputGroupItem>
        <TextInput
          id="reg_token_life_time_input"
          isDisabled={false}
          max={5}
          min={0}
          onChange={[Function]}
          validated="default"
          value={0}
        />
      </InputGroupItem>
      <InputGroupItem>
        <Dropdown
          dropdownItems={
            Array [
              <DropdownItem
                id="unit-dropdownitem-mib"
              >
                MiB
              </DropdownItem>,
              <DropdownItem
                id="unit-dropdownitem-gib"
              >
                GiB
              </DropdownItem>,
            ]
          }
          isOpen={false}
          onSelect={[Function]}
          toggle={
            <DropdownToggle
              isDisabled={false}
              onToggle={[Function]}
            >
              MiB
            </DropdownToggle>
          }
        />
      </InputGroupItem>
    </InputGroup>
  </FormGroup>
</div>
`;

exports[`UnitInputField should render without dropdown (single unit) 1`] = `
<div
  className="container-unit-input-field"
>
  <FormGroup
    fieldId="quota-limit-resource-quota-form-group"
    label="Quota Limit"
    labelIcon={
      <LabelIcon
        text="Descriptive title."
      />
    }
    validated="default"
  >
    <InputGroup>
      <InputGroupItem>
        <TextInput
          id="reg_token_life_time_input"
          isDisabled={false}
          max={5}
          min={0}
          onChange={[Function]}
          validated="default"
          value={0}
        />
      </InputGroupItem>
      <InputGroupText>
        cores
      </InputGroupText>
    </InputGroup>
  </FormGroup>
</div>
`;
